--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,11 @@
 {
   "compilerOptions": {
+    "outDir": "./dist", // Certifique-se de que a saída vá para 'dist'
+    "rootDir": "./src",
     "target": "es2020",
     "module": "commonjs",
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true,
-    "removeComments": true,
-    "sourceMap": true
-  }
+    "esModuleInterop": true
+  },
+  "include": ["src/**/*"]
 }
