--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@fastify/cors": "^10.0.0",
     "@prisma/client": "^5.19.1",
-    "fastify": "^5.0.0",
+    "fastify": "^4.0.0",
+    "fastify-cors": "^6.1.0",
+    "fastify-type-provider-zod": "^2.0.0",
     "zod": "^3.23.8"
   }
 }
