--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "dependencies": {
     "@fastify/cors": "^10.0.0",
     "@prisma/client": "^5.19.1",
-    "fastify": "^4.0.0",
+    "dayjs": "^1.11.13",
+    "fastify": "^5.0.0",
     "fastify-cors": "^6.1.0",
     "fastify-type-provider-zod": "^2.0.0",
+    "nodemailer": "^6.9.15",
     "zod": "^3.23.8"
   }
 }
