--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^22.5.5",
     "@types/nodemailer": "^6.4.16",
     "prisma": "^5.19.1",
@@ -26,6 +27,7 @@
     "@fastify/cors": "^8.5.0",
     "@prisma/client": "^5.19.1",
     "dayjs": "^1.11.13",
+    "express": "^4.21.0",
     "fastify": "^4.28.1",
     "fastify-cors": "^6.1.0",
     "fastify-type-provider-zod": "^2.0.0",
